--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3/h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, eos ea quasi possimus enim, ratione nobis consequuntur nesciunt alias dolor esse voluptate perspiciatis harum laudantium deleniti. Error repudiandae ipsa voluptatem!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias non tempore ea, consequatur qui doloremque repudiandae provident laborum blanditiis iure a numquam nisi delectus! Quae atque hic praesentium error? Exercitationem!</p>
         </article>
     </main>
 </body>
