--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Curso de HTML5 com CSS3/h2>
+            <h2>Curso de HTML5 com CSS3</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, eos ea quasi possimus enim, ratione nobis consequuntur nesciunt alias dolor esse voluptate perspiciatis harum laudantium deleniti. Error repudiandae ipsa voluptatem!</p>
         </article>
         <article>
